--- a/roles/identify_web_ports/tasks/nginx.yaml
+++ b/roles/identify_web_ports/tasks/nginx.yaml
@@ -3,22 +3,9 @@
   register: nginx_listen_ports
   changed_when: false
 
-# - name: Extract nginx ports (clean up extra spaces/tabs)
-#   set_fact:
-#     nginx_ports: "{{ nginx_listen_ports.stdout_lines | map('regex_replace', '^\\s*listen\\s*', '') | map('trim') | rejectattr('0', 'search', '^#') | map('regex_findall', '\\d+') | unique }}"
-
-- name: Extract nginx ports (clean up extra spaces/tabs)
+- name: Extract nginx ports (clean up extra spaces/tabs, remove comments, extract only numbers)
   set_fact:
     nginx_ports: "{{ nginx_listen_ports.stdout_lines | map('regex_replace', '^\\s*listen\\s*', '') | map('trim') | rejectattr('0', 'search', '^#') | map('regex_findall', '\\d+') | flatten | unique }}"
-
-
-# - name: Remove comments lines
-#   set_fact:
-#     nginx_ports: "{{ nginx_ports | rejectattr('0', 'search', '^#') | map('regex_findall', '\\d+') | list | unique }}"
-
-# - name: Get unique ports numbers
-#   set_fact:
-#     nginx_ports:  "{{ nginx_ports | map('regex_findall', '\\d+') | list | unique }}"
 
 - name: Display nginx ports
   debug:
