--- a/roles/identify_and_backup_content/tasks/nginx.yaml
+++ b/roles/identify_and_backup_content/tasks/nginx.yaml
@@ -67,18 +67,16 @@
 
 # Backup
 
-- name: Create directory for nginx backup in {{ rootless_user }} home directory
+- name: Create directory for nginx backup in {{ ansible_env.HOME }} home directory
   file:
-    path: /home/{{ rootless_user }}/nginx
+    path: /home/{{ ansible_env.HOME }}/nginx
     state: directory
-    owner: "{{ rootless_user }}"
-    group: "{{ rootless_user }}"
     mode: '0755'
 
 - name: Backup nginx config recursively while preserving file permissions
   ansible.builtin.copy:
     src: "{{ nginx_root_path }}/"
-    dest: /home/{{ rootless_user }}/nginx{{ nginx_root_path }}
+    dest: /home/{{ ansible_env.HOME }}/nginx{{ nginx_root_path }}
     mode: preserve
     force: true
     remote_src: true
@@ -87,7 +85,7 @@
 - name: Backup nginx content recursively while preserving file permissions
   ansible.builtin.copy:
     src: "{{ item }}"
-    dest: /home/{{ rootless_user }}/nginx{{ item }}
+    dest: /home/{{ ansible_env.HOME }}/nginx{{ item }}
     mode: preserve
     force: true
     remote_src: true
@@ -96,7 +94,7 @@
  
 - name: Create the target directories dynamically
   ansible.builtin.file:
-    path: "/home/{{ rootless_user }}/nginx/{{ item | regex_replace('^/+', '') | regex_replace('/[^/]+$', '') }}"
+    path: "/home/{{ ansible_env.HOME }}/nginx/{{ item | regex_replace('^/+', '') | regex_replace('/[^/]+$', '') }}"
     state: directory
     mode: '0755'
   loop: "{{ nginx_ssl_certs_path }}"
@@ -105,59 +103,10 @@
 - name: Backup nginx certificates recursively while preserving file permissions
   ansible.builtin.copy:
     src: "{{ item }}"
-    dest: /home/{{ rootless_user }}/nginx{{ item }}
+    dest: /home/{{ ansible_env.HOME }}/nginx{{ item }}
     mode: preserve
     force: true
     remote_src: true
   loop: "{{ nginx_ssl_certs_path }}"
   ignore_errors: true
   become: true
-
-- name: Change owner of /home/{{ rootless_user }}/nginx recursivelly
-  ansible.builtin.file:
-    path: /home/{{ rootless_user }}/nginx
-    owner: "{{ rootless_user }}"
-    group: "{{ rootless_user }}"
-    recurse: yes
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-# - name: Get nginx configuration file path
-#   ansible.builtin.shell: nginx -V
-#   register: nginx_config_file
-#   failed_when: nginx_config_file.rc != 0
-#   changed_when: false
-
-# - name: debug
-#   debug:
-#     msg: "{{ nginx_config_file}}"
-
-# - name: Extract nginx configuration root path
-#   set_fact:
-#     nginx_root_path_tmp: "{{ nginx_config_file.stderr | regex_search('--conf-path=(.*)', '\\1') | first }}"
-#     nginx_root_path: "{{ nginx_root_path_tmp.split(' ')[0] }}"
-#     #nginx_config_file_path: "{{ nginx_root_path | regex_replace('/[^/]+$', '') }}"
-
-# # - name: Extract nginx configuration file path
-# #   set_fact:
-# #     nginx_config_file_path: "{{ nginx_root_path }}/{{ nginx_config_file.stdout | regex_search('SERVER_CONFIG_FILE=\"([^\"]+)\"', '\\1') | first }}"
-
-# - name: Display nginx configuration directory
-#   debug:
-#     msg: "nginx configuration directory is: {{ nginx_root_path }}"
