--- a/roles/run_container/tasks/apache2.yaml
+++ b/roles/run_container/tasks/apache2.yaml
@@ -12,33 +12,27 @@
 
 - name: Create directory for Dockerfile
   file:
-    path: /home/{{ rootless_user }}/apache2
+    path: /home/{{ ansible_env.HOME }}/apache2
     state: directory
-    owner: "{{ rootless_user }}"
-    group: "{{ rootless_user }}"
     mode: '0755'
 
 - name: Create Dockerfile from template
   template:
-    src: templates/Dockerfile.j2
-    dest: /home/{{ rootless_user }}/apache2/Dockerfile
-    owner: "{{ rootless_user }}"
-    group: "{{ rootless_user }}"
+    src: templates/Dockerfile_apache2.j2
+    dest: /home/{{ ansible_env.HOME }}/apache2/Dockerfile
     mode: '0755'
 
 - name: Create entrypoint.sh from template
   template:
-    src: templates/entrypoint.sh
-    dest: /home/{{ rootless_user }}/apache2/entrypoint.sh
-    owner: "{{ rootless_user }}"
-    group: "{{ rootless_user }}"
+    src: templates/entrypoint_apache2.sh
+    dest: /home/{{ ansible_env.HOME }}/apache2/entrypoint.sh
     mode: '0755'
 
 - name: Build container image
   command: 
     cmd: podman build -t {{ custom_apache2_container_image }} .
-    chdir: /home/{{ rootless_user }}/apache2
-  become_user: "{{ rootless_user }}"
+    chdir: /home/{{ ansible_env.HOME }}/apache2
+  become_user: "{{ ansible_env.HOME }}"
 
 - name: Stop apache2 service on host os
   systemd:
@@ -62,6 +56,6 @@
 - name: Remove not used images
   command:
     cmd: podman image prune --force
-  become_user: "{{ rootless_user }}"
+  become_user: "{{ ansible_env.HOME }}"
 
 
