--- a/roles/run_container/defaults/nginx.yaml
+++ b/roles/run_container/defaults/nginx.yaml
@@ -1,6 +1,6 @@
 nginx_container_name: nginx_ubuntu
 custom_nginx_container_image: docker.io/library/nginx_ubuntu:22.04
-nginx_config_path: "{{ notdefined | mandatory(msg='This variable is required. config') }}"
-nginx_content_path: "{{ notdefined | mandatory(msg='This variable is required. content') }}"
-nginx_ssl_certs_path: "{{ nginx_sslcertificatefile_path }}"
 
+nginx_config_path: "{{ nginx_root_path }}"
+nginx_content_path: "{{ nginx_document_roots }}"
+nginx_ssl_certs_path: "{{ nginx_ssl_certs_path }}"
