--- a/roles/identify_and_backup_content/tasks/nginx.yaml
+++ b/roles/identify_and_backup_content/tasks/nginx.yaml
@@ -76,7 +76,7 @@
 - name: Backup nginx config recursively while preserving file permissions
   ansible.builtin.copy:
     src: "{{ nginx_root_path }}/"
-    dest: "{{ ansible_env.HOME }}/nginx{{ nginx_root_path }}"
+    dest: "{{ ansible_env.HOME }}/nginx{{ nginx_root_path }}/"
     mode: preserve
     force: true
     remote_src: true
