--- a/roles/identify_and_backup_content/tasks/nginx.yaml
+++ b/roles/identify_and_backup_content/tasks/nginx.yaml
@@ -100,6 +100,22 @@
   loop: "{{ nginx_ssl_certs_path }}"
   ignore_errors: true
 
+- name: Check if files exist
+  ansible.builtin.stat:
+    path: "{{ item }}"
+  register: file_stat
+  loop: "{{ nginx_ssl_certs_path }}"
+
+- name: Filter out files that exist
+  set_fact:
+    nginx_ssl_certs_path: "{{ nginx_ssl_certs_path | default([]) + [item.item] if file_stat.results[loop.index0].stat.exists else [] }}"
+  loop: "{{ nginx_ssl_certs_path }}"
+
+- name: Display the list of existing files
+  debug:
+    msg: "Existing files: {{ nginx_ssl_certs_path }}"
+
+
 - name: Backup nginx certificates recursively while preserving file permissions
   ansible.builtin.copy:
     src: "{{ item }}"
@@ -110,3 +126,4 @@
   loop: "{{ nginx_ssl_certs_path }}"
   ignore_errors: true
   become: true
+
