--- a/roles/identify_and_backup_content/tasks/nginx.yaml
+++ b/roles/identify_and_backup_content/tasks/nginx.yaml
@@ -108,7 +108,7 @@
 
 - name: Display the result
   debug:
-    msg: "{{ file_stat.stdout }}"
+    msg: "{{ file_stat }}"
   # when: file_stat.stat.exists
 
 - name: Backup nginx certificates recursively while preserving file permissions
