--- a/roles/identify_and_backup_content/tasks/nginx.yaml
+++ b/roles/identify_and_backup_content/tasks/nginx.yaml
@@ -86,10 +86,40 @@
     remote_src: true
   ignore_errors: true
 
-- name: Ensure source file exists, even if its not used
-  command:
-    cmd: touch {{ item }}
+
+
+
+- name: Check the status of each path (file or directory)
+  ansible.builtin.stat:
+    path: "{{ item }}"
+  register: path_stat
   loop: "{{ nginx_document_roots }}"
+
+- name: Initialize existing_nginx_document_roots_files and existing_nginx_document_roots_dirs
+  set_fact:
+    existing_nginx_document_roots_files: []
+    existing_nginx_document_roots_dirs: []
+
+- name: Add to existing_nginx_document_roots_files or existing_nginx_document_roots_dirs based on the type
+  set_fact:
+    existing_nginx_document_roots_files: "{{ existing_nginx_document_roots_files + [item.item] if path_stat.results[loop.index0].stat.exists and path_stat.results[loop.index0].stat.isreg else existing_nginx_document_roots_files }}"
+    existing_nginx_document_roots_dirs: "{{ existing_nginx_document_roots_dirs + [item.item] if path_stat.results[loop.index0].stat.exists and path_stat.results[loop.index0].stat.isdir else existing_nginx_document_roots_dirs }}"
+  loop: "{{ paths_to_check }}"
+  when: path_stat.results[loop.index0].stat.exists
+
+- name: Display the existing files
+  debug:
+    msg: "Existing files: {{ existing_nginx_document_roots_files }}"
+
+- name: Display the existing directories
+  debug:
+    msg: "Existing directories: {{ existing_nginx_document_roots_dirs }}"
+
+
+
+
+
+
 
 - name: Backup nginx content recursively while preserving file permissions
   ansible.builtin.copy:
