--- a/roles/identify_and_backup_content/tasks/apache2.yaml
+++ b/roles/identify_and_backup_content/tasks/apache2.yaml
@@ -67,28 +67,28 @@
 
 - name: Create directory for apache2 backup in {{ ansible_env.HOME }} home directory
   file:
-    path: "{{ ansible_env.HOME }}/apache2"
+    path: "{{ ansible_env.HOME }}/apache2/backup"
     state: directory
     mode: '0755'
 
 - name: Backup apache2 config recursively while preserving file permissions
   ansible.builtin.copy:
     src: "{{ apache2_root_path }}/"
-    dest: "{{ ansible_env.HOME }}/apache2{{ apache2_root_path }}"
+    dest: "{{ ansible_env.HOME }}/apache2/backup{{ apache2_root_path }}"
     mode: preserve
     force: true
 
 - name: Backup apache2 content recursively while preserving file permissions
   ansible.builtin.copy:
     src: "{{ item }}/"
-    dest: "{{ ansible_env.HOME }}/apache2{{ item }}"
+    dest: "{{ ansible_env.HOME }}/apache2/backup{{ item }}"
     mode: preserve
     force: true
   loop: "{{ apache2_document_roots }}"
  
 - name: Create the target directories dynamically
   ansible.builtin.file:
-    path: "{{ ansible_env.HOME }}/apache2/{{ item | regex_replace('^/+', '') | regex_replace('/[^/]+$', '') }}"
+    path: "{{ ansible_env.HOME }}/apache2/backup/{{ item | regex_replace('^/+', '') | regex_replace('/[^/]+$', '') }}"
     state: directory
     mode: '0755'
   loop: "{{ apache2_ssl_certs_path }}"
@@ -97,7 +97,7 @@
 - name: Backup apache2 certificates recursively while preserving file permissions
   ansible.builtin.copy:
     src: "{{ item }}/"
-    dest: "{{ ansible_env.HOME }}/apache2{{ item }}"
+    dest: "{{ ansible_env.HOME }}/apache2/backup{{ item }}"
     mode: preserve
     force: true
   loop: "{{ apache2_ssl_certs_path }}"
