--- a/roles/identify_web_service/tasks/ubuntu.yaml
+++ b/roles/identify_web_service/tasks/ubuntu.yaml
@@ -1,32 +1,7 @@
-# - name: Check if Apache2 (httpd) is installed
-#   shell: dpkg -l | grep -E 'apache2|httpd'
-#   register: apache_check
-#   ignore_errors: yes
-
-# - name: Set web service name to Apache
-#   set_fact:
-#     web_service_name: "apache2"
-#   when: apache_check.rc == 0
-
-# - name: Check if Apache2 is installed
-#   ansible.builtin.package_facts:
-#   register: apache2_installed
-
-# - name: Check if Apache2 is running
-#   ansible.builtin.systemd:
-#     name: apache2
-#     state: started
-#   when: apache2_installed.packages['apache2'] is defined
-#   register: apache2_running
-
-# - name: Set web service name to Apache
-#   set_fact:
-#     web_service_name: "apache2"
-#   when: apache2_running.state == "started" and apache2_running is defined
-
 - name: Gather facts about services
   service_facts:
 
+# Apache2
 - name: Check if apache2 is installed and running
   set_fact:
     apache2_started: "{{ 'true' if ansible_facts.services['apache2'].state == 'running' else 'false' }}"
@@ -36,6 +11,8 @@
   set_fact:
     web_service_name: "apache2"
   when: apache2_started is defined and apache2_started
+
+# Nginx
 
 - name: Check if nginx is installed and running
   set_fact:
@@ -47,31 +24,23 @@
     web_service_name: "nginx"
   when: nginx_started is defined and nginx_started
 
-- name: Print web service name
+# Nodejs
+
+- name: Check if Node.js is running
+  command: ps aux | grep '[n]ode'
+  register: node_process
+  changed_when: false
+  failed_when: false
+
+- name: Ensure Node.js is running
   debug:
-    msg: "Web service {{ web_service_name }} is running"
-  when: web_service_name is defined
-
-
-
-
-  ###################
-# - name: Check if Nginx is installed
-#   ansible.builtin.package_facts:
-#   register: nginx_installed
-
-# - name: Check if Nginx is running
-#   ansible.builtin.systemd:
-#     name: nginx
-#     state: started
-#   when: nginx_installed.packages['nginx'] is defined
-#   register: nginx_running
-
-
-# - name: Set web service name to Nginx
-#   set_fact:
-#     web_service_name: "nginx"
-#   when: nginx_running.state == "started" and nginx_running is defined
+    msg: "Node.js is running"
+  when: node_process.stdout != ""
+  
+- name: Ensure Node.js is not running
+  debug:
+    msg: "Node.js is not running"
+  when: node_process.stdout == ""
 
 
 
@@ -99,6 +68,11 @@
 # - name: Display the detected web service binary name
 #   debug:
 #     msg: "Detected web service binary name: {{ web_service_name }}"
+- name: Print web service name
+  debug:
+    msg: "Web service {{ web_service_name }} is running"
+  when: web_service_name is defined
+
 
 - name: Fail playbook if no web service detected
   debug:
